# astrosync

./: LICENSE  pyproject.toml
astrosync/: __init__.py  cli.py
tests/: test_astrosync.py
tests/fixtures/telltale/Apps/Postbox/A/: 2024-06-09 telltale.txt
tests/fixtures/telltale/Apps/Postbox/B/: 2024-03-06 telltale01.txt  2024-04-02 telltale.txt  2024-05-01 telltale -1937bc80-.txt
tests/fixtures/telltale/Apps/Postbox/C/: 2024-01-08 bernice.txt
